style.css
@import url('https://fonts.googleapis.com/css2?family=NTR&display=swap');

.container {
  display: flex;
}

.fixed { 
  position: fixed; 
  top: 0; 
  left: 0; 
  width: 100%; 
  z-index: 100; 
  background-color: darkgreen;

}

.subtopicI {
  /*the height of the header*/
  margin-top: 125px; 
}

.backgroundImage { 
  background: url(Resources/background.jpg);
}

header {
  position: relative;
  padding-left: 4rem;
  color: white;
  font-size: large;
}

.content{
  white-space: nowrap;
}



body{
  background-color: darkgreen;
  font-family: "NTR", sans-serif; 
}

.wrapper {
  text-align: center;
  margin: auto;
}

.nav div {
  height: 5px;
  background-color: white;
  margin: 4px 0;
  border-radius: 25px;
}

.nav {
  width: 40px;
  display: block;
  margin-bottom: 1em;
  float: right;
}

.login {
  margin-right:auto;
  margin-left: auto;
  margin-top:auto;
  margin-bottom: auto;
  color: darkgreen;
  background-color: white;
  height: 50px;
  border-radius: 15%; 
  font-size: 1.5em;
  padding-top: 5px;
  padding-bottom: 5px; 
  padding-left: 10px; 
  padding-right: 10px;
}

.login:hover {
  color: darkgreen;
  background-color: lightgrey;
}

.one {
  width: 40px;
  float: right;
}

.two {
  width: 30px;
  float: right;
}

.three {
  width: 35px;
  float: right;
}

.nav:hover div {
  width: 40px;
}

h2 {
  color: white;
}

p {
    color: lightblue;
}

.toRight {
    margin-left: auto;
}

button:hover {
    color: black;
    background-color: gold;
}

